# curve_method

./: .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini  travis.yml
curve_method/: __init__.py  evaluation.py  plotting.py  validation.py  variance.py
src/curvature_method/: __init__.py  evaluation.py  plotting.py
src/curve_method/: validation.py  variance.py
tests/: test_evaluation.py  test_plotting.py
