[metadata]
name = curvature_method
version = 0.1.0
license = MIT
description = A quantitative approach for selecting the optimal number of clusters in a data set
long_description = file: README.md
author = Alex Freund
author_email = alexjfreund@gmail.com
classifiers = []

[options]
packages = find:
package_dir = 
    =src
include_package_data = True
install_requires = []

[options.packages.find]
where=src